--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1>Drone WebGL</h1>
+		<h3><a href="https://github.com/GTourinho/DroneWebGL"> Github Repository</a><br/>
     <h4>Controles: w,s,a,d + shift,space (velocidade) + enter (rotação automática para o centro on/off)</h4>
 		<br/>
 		<div id="WebGL-output" ></div>   
